# slint-media

./: .gitignore  Cargo.toml
src/: main.rs
ui/: appwindow.slint
