[package]
name = "slint_media"
version = "0.1.0"
authors = ["Alexander Rigler <alexandercrigler@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.19.0"
slint = "1.6"

[build-dependencies]
slint-build = "1.6"
